--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -4,22 +4,14 @@
 
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  margin: 0 10%;
+  // background-color: antiquewhite;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  opacity: 0.2;
+  min-height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,15 +20,3 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
