--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -38,5 +38,9 @@
       box-sizing: border-box;
       border-radius: 10px;
       padding: 5px 15px !important;
+
+      &:hover{
+        cursor: pointer;
+      }
     }
   }
