--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -10,6 +10,7 @@
 @import '../style/Resort.scss';
 @import '../style/Woman.scss';
 @import '../style/Tours.scss';
+@import '../style/Admin.scss';
 
 *{
   margin: 0;
@@ -40,44 +41,6 @@
 
   &__bottom{
     width: 100%;
-  }
-}
-
-.change-tour{
-  display: flex;
-  flex-direction: column;
-
-  & h1{
-    text-align: center;
-    font-size: 20px;
-    font-weight: 700;
-  }
-
-  & .add-tour{
-    max-width: 500px;
-    width: 100%;
-
-    & .add-sort{
-      display: flex;
-      justify-content: space-between;
-    }
-  
-    & span{
-      max-width: 100px;
-      width: 100%;
-    }
-  }
-
-  & .dell-tours{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-
-    & .card{
-      margin: 20px;
-    }
   }
 }
 
