--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -30,6 +30,15 @@
           list-style-type: none;
           text-decoration: none;
         }
+        & div{
+          display: flex;
+          align-items: center;
+          
+          & li{
+            text-align: center;
+            padding: 10px;
+          }
+        }
       }
     }
 
