BurgerMenu and loading

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -11,6 +11,7 @@
 @import '../style/Woman.scss';
 @import '../style/Tours.scss';
 @import '../style/Admin.scss';
+@import '../style/Burger-menu.scss';
 
 *{
   margin: 0;
