--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -18,6 +18,7 @@
       font-weight: 600;
       font-size: 17px;
       align-self: center;
+      text-align: -webkit-right;
   
       & ul{
         display: flex;
