fix bugs with key

--- a/src/style/Admin.scss
+++ b/src/style/Admin.scss
@@ -34,4 +34,9 @@
         margin: 20px;
       }
     }
+    
+    & .admin_btn{
+      display: flex;
+      justify-content: space-between;
+    }
   }
